--- a/Front-end/FormTwo.html
+++ b/Front-end/FormTwo.html
@@ -49,28 +49,25 @@
     <main>
         <div>
             <div class="c-layout c-layout--gutter">
-                <header class="o-row">
-                    <div class="o-container" style="text-align: center;">
-                        <div style="text-align: left;">
-                            <div>
-                                <form action="./FormOne.html">
-                                    <input type="submit" name="Submit" id="submit" value="Start a game" style="height: 80px; width: 200px">
-                                </form>
-                            </div>
-                            <br>
-                            <div>
-                                <h2>information...</h2>
-                                <h3>Gamemodes</h3>
-                                <h4>Gamemode 1</h4>
-                                <p>Werking</p>
-                                <h4>Gamemode 2</h4>
-                                <p>Werking</p>
-                                <h4>Gamemode 3</h4>
-                                <p>Werking</p>
-                            </div>
-                        </div>
-                    </div>
-                </header>
+                <form action="./GamePage.html">
+                    <label for="usernameOne">Username player 1:</label>
+                    <input type="text" name="usernameOne" id="usernameOne" placeholder="Player 1">
+                    <input type="color" id="colorOne" value="#ff0000">
+                    <br>
+                    <label for="usernameTwo">Username player 2:</label>
+                    <input type="text" name="usernameTwo" id="usernameTwo" placeholder="Player 2">
+                    <input type="color" id="colorOne" value="#00ff00">
+                    <br>
+                    <label for="usernameThree">Username player 3:</label>
+                    <input type="text" name="usernameThree" id="usernameThree" placeholder="Player 3">
+                    <input type="color" id="colorOne" value="#0000ff">
+                    <br>
+                    <label for="usernameFour">Username player 4:</label>
+                    <input type="text" name="usernameFour" id="usernameFour" placeholder="Player 4">
+                    <input type="color" id="colorOne" value="#ffff00">
+                    <br>
+                    <input type="submit" name="Submit" id="submit" value="Next">
+                </form>
             </div>
         </div>
     </main>
