--- a/Front-end/GamePage.html
+++ b/Front-end/GamePage.html
@@ -23,10 +23,6 @@
                 <div class="c-header__logo">                      
                     <a class="title" href="./index.html">
                         <h1>
-                            <svg id="water-drupple" data-name="water-drupple" xmlns="http://www.w3.org/2000/svg" width="19.845" height="33.395" viewBox="0 0 19.845 33.395">
-                            <path id="Drip" d="M737.422,297.5s-9.922,16.431-9.922,23.472a9.922,9.922,0,0,0,19.845,0C747.345,313.931,737.422,297.5,737.422,297.5Z" transform="translate(-727.5 -297.5)" fill="#1a7ae6" fill-rule="evenodd"/>
-                            <path id="Ref" d="M760.969,574.534c-.978,2.238-3.774,7.194-3.774,11.917a3.283,3.283,0,1,0,6.567,0C763.762,581.728,760.5,577.623,760.969,574.534Z" transform="translate(-755.928 -562.711)" fill="#fff" fill-rule="evenodd"/>
-                            </svg>
                             Title
                         </h1>
                     </a> 
@@ -78,10 +74,24 @@
                                         <p class="js-score-player2" style="font-size: 56px;">0</p>
                                     </div>
                                 </fieldset>
+                                <fieldset style="display: inline; height: 200px; width: 200px;">
+                                    <legend>Player 3</legend>
+                                    <div style="text-align: center;">
+                                        <p class="js-score-player3" style="font-size: 56px;">0</p>
+                                    </div>
+                                </fieldset>
+                                <fieldset style="display: inline; height: 200px; width: 200px;">
+                                    <legend>Player 4</legend>
+                                    <div style="text-align: center;">
+                                        <p class="js-score-player4" style="font-size: 56px;">0</p>
+                                    </div>
+                                </fieldset>
                             </div>
                             <div style="display: inline-block; margin-top: 10px;">
                                 <button class="js-btn-player1" style="width: 200px; height: 40px; padding: 15px; margin: 2px; line-height: 40px; padding: 0px;">+1</button>
                                 <button class="js-btn-player2" style="width: 200px; height: 40px; padding: 15px; margin: 2px; line-height: 40px; padding: 0px;">+1</button>
+                                <button class="js-btn-player3" style="width: 200px; height: 40px; padding: 15px; margin: 2px; line-height: 40px; padding: 0px;">+1</button>
+                                <button class="js-btn-player4" style="width: 200px; height: 40px; padding: 15px; margin: 2px; line-height: 40px; padding: 0px;">+1</button>
                             </div>
                         </div>
                     </div>
