Basic text colors and button layout

--- a/Front-end/FormOne.html
+++ b/Front-end/FormOne.html
@@ -60,11 +60,13 @@
                     <br>
                     <label for="gamemodes">Gamemode:</label>
                     <select name="gamemodes" id="gamemodes">
-                        <option value="1">Gamemode 1</option>
-                        <option value="2">Gamemode 2</option>
-                        <option value="3">Gamemode 3</option>
+                        <option value="1">2 min</option>
+                        <option value="2">Simon says</option>
+                        <option value="3">Speedrun</option>
+                        <option value="3">Shuttle run</option>
                     </select>
                     <br>
+                    <input type="button" value="Previous" onclick="history.back()">
                     <input type="submit" name="Submit" id="submit" value="Next">
                 </form>
             </div>
