--- a/Front-end/HomePage.html
+++ b/Front-end/HomePage.html
@@ -54,19 +54,35 @@
                         <div style="text-align: left;">
                             <div>
                                 <form action="./FormOne.html">
-                                    <input type="submit" name="Submit" id="submit" value="Start a game" style="height: 80px; width: 200px">
+                                    <input type="submit" name="Submit" id="submit" value="Start a game">
                                 </form>
                             </div>
                             <br>
-                            <div>
-                                <h2>information...</h2>
+                            <div class="c-gamemodes">
                                 <h3>Gamemodes</h3>
-                                <h4>Gamemode 1</h4>
-                                <p>Werking</p>
-                                <h4>Gamemode 2</h4>
-                                <p>Werking</p>
-                                <h4>Gamemode 3</h4>
-                                <p>Werking</p>
+                                <h4>2 min</h4>
+                                <p>
+                                    Everyone has 2 minutes to hit as many glowing buttons as possible. <br>
+                                    Every time a new record is set the score will be saved in the leaderboard.
+                                </p>
+                                <h4>Simon says</h4>
+                                <p>There will be a automaticly generated sequence of glowing buttons. <br>
+                                    And you have te press the buttons in the right order within the time frame. <br>
+                                    Every time you complete the sequence the sequence will get longer. <br>
+                                    And this will go on until you fail.
+                                </p>
+                                <h4>Speedrun</h4>
+                                <p>
+                                    You have to hit a set amount of glowing buttons as fast as possible. <br>
+                                    Every time a new record is hit the score will be saved in the leaderboard.
+                                </p>
+                                <h4>Shuttle run</h4>
+                                <p>
+                                    Once the game starts, you will have a set amount of time to hit the glowing button. <br>
+                                    Every time you hit the button in time, the time decreases. <br>
+                                    If you hit the button too late, the game is over. <br>
+                                    Every time a new record is hit the score will be saved in the leaderboard.
+                                </p>
                             </div>
                         </div>
                     </div>
