--- a/Front-end/FormTwo.html
+++ b/Front-end/FormTwo.html
@@ -66,6 +66,7 @@
                     <input type="text" name="usernameFour" id="usernameFour" placeholder="Player 4">
                     <input type="color" id="colorOne" value="#ffff00">
                     <br>
+                    <input type="button" value="Previous" onclick="history.back()">
                     <input type="submit" name="Submit" id="submit" value="Next">
                 </form>
             </div>
