--- a/Front-end/1vs1Page.html
+++ b/Front-end/1vs1Page.html
@@ -31,6 +31,7 @@
                     <div class="c-nav">
                         <nav class="c-nav u-hide">
                             <ul class="o-list c-nav__list">
+                                <li class="c-nav-item"><a class="c-nav__link" href="./HomePage2.html">Home</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -57,6 +58,7 @@
                                 <h2>Players</h2>
                                 <div class="c-grid-players">
                                     <!-- Player 1 -->
+                                    <!-- color picker -->
                                     <div class="c-card-player">
                                         <svg class="c-card-player__svg c-player-1__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                             <defs>
