--- a/Front-end/HomePage2.html
+++ b/Front-end/HomePage2.html
@@ -31,6 +31,10 @@
                     <div class="c-nav">
                         <nav class="c-nav u-hide">
                             <ul class="o-list c-nav__list">
+
+                              <li class="c-nav-item"><a class="c-nav__link" href="">Current Game</a></li>
+                              <li class="c-nav-item"><a class="c-nav__link" href="">Queue</a></li>
+                              <li class="c-nav-item"><a class="c-nav__link" href="">Info</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -94,7 +98,7 @@
                                         </a>
                                     </div>
                                     <!-- Simon Says -->
-                                    <div class="c-card-gamemode o-disabled">
+                                    <div class="c-card-gamemode">
                                         <div class="c-card-gamemode-info__button">
                                             <svg class="c-card-gamemode-info__svg js-btn-info-simon-says" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                                 <defs>
@@ -118,7 +122,8 @@
                                                 Each round the sequence will be longer.
                                             </p>
                                         </div>
-                                        <svg class="c-card-gamemode__svg js-card-gamemode-svg-simon-says" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
+                                        <a href="">
+                                          <svg class="c-card-gamemode__svg js-card-gamemode-svg-simon-says" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                             <defs>
                                               <clipPath id="clip-card-simon-says">
                                                 <rect width="240" height="240"/>
@@ -135,9 +140,10 @@
                                         <div class="c-card-gamemode__footer js-btn-simon-says">
                                             <h2 class="c-card-gamemode__title">Simon says</h2>
                                         </div>
+                                        </a>
                                     </div>
                                     <!-- Speedrun -->
-                                    <div class="c-card-gamemode o-disabled">
+                                    <div class="c-card-gamemode">
                                         <div class="c-card-gamemode-info__button">
                                             <svg class="c-card-gamemode-info__svg js-btn-info-speedrun" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                                 <defs>
@@ -157,7 +163,8 @@
                                         <div class="c-card-gamemode-info__content js-card-gamemode-info-speedrun o-hide-accessible">
                                             <p>You have to hit a set amount of random glowing buttons as fast as possible. Speed counts!</p>
                                         </div>
-                                        <svg class="c-card-gamemode__svg js-card-gamemode-svg-speedrun" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
+                                        <a href="">
+                                          <svg class="c-card-gamemode__svg js-card-gamemode-svg-speedrun" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                             <defs>
                                               <clipPath id="clip-card-speedrun">
                                                 <rect width="240" height="240"/>
@@ -170,9 +177,10 @@
                                         <div class="c-card-gamemode__footer js-btn-speedrun">
                                             <h2 class="c-card-gamemode__title">Speedrun</h2>
                                         </div>
+                                        </a>
                                     </div>
                                     <!-- Shuttle Run -->
-                                    <div class="c-card-gamemode o-disabled">
+                                    <div class="c-card-gamemode">
                                         <div class="c-card-gamemode-info__button">
                                             <svg class="c-card-gamemode-info__svg js-btn-info-shuttle-run" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                                 <defs>
@@ -192,7 +200,8 @@
                                         <div class="c-card-gamemode-info__content js-card-gamemode-info-shuttle-run o-hide-accessible">
                                             <p> You will have a set amount of time to hit the glowing button. Every time you hit the button in time you get a point and the time decreases. Until you fail!</p>
                                         </div>
-                                        <svg class="c-card-gamemode__svg js-card-gamemode-svg-shuttle-run" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
+                                        <a href="">
+                                          <svg class="c-card-gamemode__svg js-card-gamemode-svg-shuttle-run" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                                             <defs>
                                               <clipPath id="clip-card-shuttle_run">
                                                 <rect width="240" height="240"/>
@@ -207,6 +216,44 @@
                                         <div class="c-card-gamemode__footer js-btn-shuttle-run">
                                             <h2 class="c-card-gamemode__title">Shuttle Run</h2>
                                         </div>
+                                        </a>
+                                    </div>
+                                    <!-- General info card -->
+                                    <div class="c-card-info">
+                                      <a href="">
+                                        <div class="c-card-info__content">
+                                          <p class="c-card-info__text"><b>Gamemode:</b> Shuttle Run</p>
+                                          <p class="c-card-info__text"><b>Start time:</b> 10sec</p>
+                                          <p class="c-card-info__text"><b>Score:</b> 10</p>
+                                          <p class="c-card-info__text"><b>Username:</b> Tibo</p>
+                                        </div>    
+                                        <div class="c-card-info__footer">
+                                          <h2 class="c-card-gamemode__title">Current</h2>
+                                        </div>
+                                      </a>
+                                    </div>
+                                    <div class="c-card-info">
+                                      <a href="">
+                                        <div class="c-card-info__content">
+                                          <p class="c-card-info__text"><b>Gemode:</b> Speedrun</p>
+                                          <p class="c-card-info__text"><b>Buttons:</b> 20</p>
+                                          <p class="c-card-info__text"><b>Username:</b> Ibe</p>
+                                        </div>  
+                                        <div class="c-card-info__footer">
+                                          <h2 class="c-card-gamemode__title">First in queue</h2>
+                                        </div>
+                                      </a>
+                                    </div>
+                                    <!-- General info card -->
+                                    <div class="c-card-info-2">
+                                      <a href="">
+                                        <div class="c-card-info__content">
+                                          <p class="c-card-info__text">(Screen that automatically moves around <br> between other games in the queue)</p>
+                                        </div>
+                                        <div class="c-card-info__footer">
+                                          <h2 class="c-card-gamemode__title">Queue</h2>
+                                        </div>
+                                      </a>
                                     </div>
                                 </div>
                             </div>
