--- a/Front-end/Home.html
+++ b/Front-end/Home.html
@@ -266,5 +266,30 @@
             </div>
         </div>
     </main>
+    <aside class="c-mobile-nav">
+      <div class="c-mobile-nav__bg"></div>
+      <div class="c-mobile-nav__body">
+          <div class="c-mobile-nav__header">            
+              <h1 class="c-mobile-nav-tile">
+                  Interactive palen
+              </h1>
+              <button class="o-button-reset c-nav-trigger js-toggle-nav">
+                  <svg class="c-nav-trigger__svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                  </svg>
+              </button>
+          </div>
+          <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
+              <nav class="c-nav">
+                  <ul class="o-list c-nav__list">
+                      <li class="c-nav__item"><a href="../Front-end/Live.html" class="c-nav__link u-live">live</a></li>
+                      <li class="c-nav__item"><a href="../Front-end/Queue.html" class="c-nav__link">Queue</a></li>
+                      <li class="c-nav__item"><a href="../Front-end/Info.html" class="c-nav__link">Info</a></li>
+                  </ul>
+              </nav>
+          </div>
+      </div>
+  </aside>
 </body>
 </html>
