--- a/Front-end/Home.html
+++ b/Front-end/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Various interactive running games with a digital aspect, Competing records and live data!">
     <link rel="stylesheet" href="./style/screen.css">
     <title>Interactive palen</title>
     <link rel="icon" href="/pictures/icon.svg">
@@ -43,7 +44,6 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18">
                             <path class="c-nav-trigger__svg" id="navbar_mobile" d="M3,24H27V21H3v3Zm0-7.5H27v-3H3v3ZM3,6V9H27V6Z" transform="translate(-3 -6)" fill="#0000ac" fill-rule="evenodd"/>
                           </svg>
-                          
                     </button>
                 </div>
             </div>
