Google meta tag

--- a/Front-end/Home.html
+++ b/Front-end/Home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Various interactive running games with a digital aspect, Competing records and live data!">
+    <meta name="google-site-verification" content="KxErv3O9QKFpXjZxdmkQuVe0iwJS8iIUlHHqigwVFqU" />
     <link rel="stylesheet" href="./style/screen.css">
     <title>Interactive palen</title>
     <link rel="icon" href="/pictures/icon.svg">
