--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Various interactive running games with a digital aspect, Competing records and live data!">
+    <meta name="keywords" content="Interactive, Running, Games, Records, Live, Data">
+    <meta name="author" content="Tibo Messiaen">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta name="google" content="notranslate">
+    <!-- Verification tag for google search index -->
     <meta name="google-site-verification" content="KxErv3O9QKFpXjZxdmkQuVe0iwJS8iIUlHHqigwVFqU" />
     <link rel="stylesheet" href="./style/screen.css">
     <title>Interactive palen</title>
