changing all home.html links to index.html

--- a/Front-end/Queue.html
+++ b/Front-end/Queue.html
@@ -31,7 +31,7 @@
                     <div class="c-nav">
                         <nav class="c-nav u-hide">
                             <ul class="o-list c-nav__list">
-                                <li class="c-nav-item"><a class="c-nav__link" href="./Home.html">Home</a></li>
+                                <li class="c-nav-item"><a class="c-nav__link" href="./index.html">Home</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -169,7 +169,7 @@
             <div class="c-mobile-nav__nav c-mobile-nav__nav--main">
                 <nav class="c-nav">
                     <ul class="o-list c-nav__list">
-                        <li class="c-nav__item"><a href="../Front-end/Home.html" class="c-nav__link">Home</a></li>
+                        <li class="c-nav__item"><a href="../Front-end/index.html" class="c-nav__link">Home</a></li>
                     </ul>
                 </nav>
             </div>
