--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -30,7 +30,7 @@
         <div class="o-container">
             <div class="c-header">
                 <div class="c-header__logo">                      
-                    <a class="title" href="Home.html">
+                    <a class="title" href="index.html">
                         <h1>
                             Interactive palen
                         </h1>
