--- a/Front-end/Queue.html
+++ b/Front-end/Queue.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="c-card-queue-footer-right">
                             <div class="c-card-queue-footer-page__text">The page you're on</div>
-                            <input type="number" class="c-card-queue-footer-page__input" value="1"></input>
+                            <input type="number" class="c-card-queue-footer-page__input" value="1" min="1" max="1"></input>
                             <svg class="c-card-queue-footer-page__arrow c-card-queue-footer-page__arrow-disabled" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="240" height="240" viewBox="0 0 240 240">
                             <defs>
                               <clipPath id="clip-Arrow-left">
